# mixmax

./: .gitignore  CMakeLists.txt  README.md  main.py  read_profile.py
py/: main.py  read_profile.py
src/: main.cpp
